--- a/examples/tensorflow/image-classifier-resnet50/cortex.yaml
+++ b/examples/tensorflow/image-classifier-resnet50/cortex.yaml
@@ -7,7 +7,7 @@
     path: predictor.py
     model_path: s3://cortex-examples/tensorflow/resnet50
     processes_per_replica: 4
-    threads_per_process: 16
+    threads_per_process: 192
     config:
       classes: https://s3.amazonaws.com/deep-learning-models/image-models/imagenet_class_index.json
       input_shape: [224, 224]
@@ -15,4 +15,9 @@
       output_key: output
   compute:
     cpu: 3
+    gpu: 1
     mem: 4G
+  autoscaling:
+    min_replicas: 1
+    max_replicas: 1
+    max_replica_concurrency: 1024
